--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-xs-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-xs-dom0.dts
@@ -45,10 +45,8 @@
 	 * to be present get broken. This is why we have to explicitly
 	 * remove the following.
 	 */
-	soc {
-		/delete-node/thermal-zones;
-		/delete-node/pmu_a57;
-	};
+	/delete-node/thermal-zones;
+	/delete-node/pmu_a57;
 };
 
 /delete-node/&adsp;
@@ -312,4 +310,5 @@
 &fcpcs			{ xen,passthrough; };
 &tsc			{ xen,passthrough; };
 &i2c_dvfs		{ xen,passthrough; };
+&pmic			{ xen,passthrough; };
 
