dom0: Update domain configs for all supported machines
The main reason is that device trees differ between
current (v4.14.35/rcar-3.6.2) and new (v4.14.75/rcar-3.9.2)
Linux versions.
As we pass through almost all HW devices to DomD we have to
care for reflecting these changes in gomain config files.

Also, as some domains configs have misc inaccuracies clean them
up as well.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-h3ulcb.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-h3ulcb.cfg
@@ -33,7 +33,6 @@ dt_compatible = [ "renesas,h3ulcb", "renesas,r8a7795" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
-    "/avs@e60a013c",
     "/gsx_opp_table0",
     "/gsx_opp_table1",
     "/gsx_opp_table2",
@@ -54,7 +53,7 @@ dt_passthrough_nodes = [
     "/firmware",
     "/soc",
     "/audio-clkout",
-    "/avb-mch",
+    "/avb-mch@ec5a0100",
     "/hdmi0-out",
     "/keyboard",
     "/leds",
@@ -67,6 +66,9 @@ dt_passthrough_nodes = [
     "/x23-clock",
     "/vspm_if",
     "/versaclk-3",
+    "/versaclk-4",
+    "/usb3s0",
+    "/usb_extal",
 ]
 
 dtdev = [
@@ -192,7 +194,7 @@ irqs = [
     197,
 # sd@ee140000
     199,
-# usb@ee0a0100
+# usb@ee0a0000
     144,
 # imr-lx4@fe860000
     224,
@@ -292,7 +294,7 @@ iomem = [
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
-#avb-mch
+#avb-mch@ec5a0100
     "ec5a0,1",
 #sound@ec500000
     "ec540,1",
@@ -364,15 +366,15 @@ iomem = [
 #vspm@fe9b0000
     "fe9bf,1",
 #vsp@fea20000
-    "fea20,4",
+    "fea20,5",
 #fcp@fea27000
     "fea27,1",
 #vsp@fea28000
-    "fea28,4",
+    "fea28,5",
 #fcp@fea2f000
     "fea2f,1",
 #vsp@fea30000
-    "fea30,4",
+    "fea30,5",
 #fcp@fea37000
     "fea37,1",
 #fdpm@fe940000
@@ -387,8 +389,6 @@ iomem = [
     "fead0,10",
 #display@feb00000
     "feb00,80",
-#display@feb00000
-    "feb90,1",
 #thermal@e6198000
     "e6198,1",
 #thermal@e6198000
