--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-h3.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-h3.cfg
@@ -33,7 +33,6 @@ dt_compatible = [ "renesas,salvator-x", "renesas,r8a7795" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
-    "/avs@e60a013c",
     "/gsx_opp_table0",
     "/gsx_opp_table1",
     "/gsx_opp_table2",
@@ -54,7 +53,7 @@ dt_passthrough_nodes = [
     "/firmware",
     "/soc",
     "/audio-clkout",
-    "/avb-mch",
+    "/avb-mch@ec5a0100",
     "/backlight",
     "/cvbs-in",
     "/hdmi-in",
@@ -76,11 +75,14 @@ dt_passthrough_nodes = [
     "/x21-clock",
     "/x22-clock",
     "/x23-clock",
-    "/i2c-8",
     "/vspm_if",
+    "/usb3s0",
+    "/usb_extal",
 ]
 
 dtdev = [
+    "/soc/dma-controller@e6460000",
+    "/soc/dma-controller@e6470000",
     "/soc/dma-controller@e6700000",
     "/soc/dma-controller@e7300000",
     "/soc/dma-controller@e7310000",
@@ -102,13 +104,12 @@ dtdev = [
     "/soc/sd@ee140000",
     "/soc/sd@ee160000",
     "/soc/usb@ee080100",
+    "/soc/usb@ee020000",
     "/soc/usb@ee0a0100",
     "/soc/usb@ee0c0100",
-    "/soc/usb@ee0e0100",
     "/soc/usb@ee080000",
     "/soc/usb@ee0a0000",
     "/soc/usb@ee0c0000",
-    "/soc/usb@ee0e0000",
     "/soc/imr-lx4@fe860000",
     "/soc/imr-lx4@fe870000",
     "/soc/imr-lx4@fe880000",
@@ -244,18 +245,14 @@ irqs = [
     199,
 # sd@ee160000
     200,
-# usb-phy@ee080200
+# usb@ee080000
     140,
-# usb-phy@ee0e0200
-    68,
-# usb@ee0a0100
+# usb@ee0a0000
     144,
-# usb@ee0c0100
+# usb@ee0c0000
     145,
 # usb@e6590000
     139,
-# usb@e659c000
-    69,
 # pcie@fe000000
     148, 149, 150,
 # pcie@ee800000
@@ -384,7 +381,7 @@ iomem = [
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
-#avb-mch
+#avb-mch@ec5a0100
     "ec5a0,1",
 #sound@ec500000
     "ec540,1",
@@ -426,14 +423,10 @@ iomem = [
 #usb@ee0c0100
 #usb@ee0c0000
     "ee0c0,1",
-#usb-phy@ee0e0200
-#usb@ee0e0100
-#usb@ee0e0000
-    "ee0e0,1",
 #usb@e6590000
     "e6590,1",
-#usb@e659c000
-    "e659c,1",
+#usb-phy@e65ee000
+    "e65ee,1",
 #pcie@fe000000
     "fe000,80",
 #pcie@ee800000
@@ -482,15 +475,15 @@ iomem = [
 #vspm@fe9b0000
     "fe9bf,1",
 #vsp@fea20000
-    "fea20,4",
+    "fea20,5",
 #fcp@fea27000
     "fea27,1",
 #vsp@fea28000
-    "fea28,4",
+    "fea28,5",
 #fcp@fea2f000
     "fea2f,1",
 #vsp@fea30000
-    "fea30,4",
+    "fea30,5",
 #fcp@fea37000
     "fea37,1",
 #fdpm@fe940000
@@ -507,7 +500,7 @@ iomem = [
     "feae0,10",
 #display@feb00000
     "feb00,80",
-#display@feb00000
+#lvds@feb90000
     "feb90,1",
 #thermal@e6198000
     "e6198,1",
