--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-m3.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-m3.cfg
@@ -33,7 +33,6 @@ dt_compatible = [ "renesas,salvator-x", "renesas,r8a7796" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
-    "/avs@e60a013c",
     "/gsx_opp_table0",
     "/gsx_opp_table1",
     "/gsx_opp_table2",
@@ -54,7 +53,7 @@ dt_passthrough_nodes = [
     "/firmware",
     "/soc",
     "/audio-clkout",
-    "/avb-mch",
+    "/avb-mch@ec5a0100",
     "/backlight",
     "/cvbs-in",
     "/hdmi-in",
@@ -68,6 +67,7 @@ dt_passthrough_nodes = [
     "/regulator-vcc-sdhi3",
     "/regulator-vccq-sdhi3",
     "/hdmi0-out",
+    "/hdmi1-out",
     "/vga",
     "/vga-encoder",
     "/lvds",
@@ -75,8 +75,9 @@ dt_passthrough_nodes = [
     "/x21-clock",
     "/x22-clock",
     "/x23-clock",
-    "/i2c-8",
     "/vspm_if",
+    "/usb3s0",
+    "/usb_extal",
 ]
 
 dtdev = [
@@ -103,6 +104,9 @@ dtdev = [
     "/soc/fcp@fea2f000",
     "/soc/fcp@fea37000",
     "/soc/hdmi@fead0000",
+    "/soc/imr-lx4@fe860000",
+    "/soc/imr-lx4@fe870000",
+    "/soc/vcp4@fe90f000",
 ]
 
 irqs = [
@@ -230,6 +234,10 @@ irqs = [
     180, 181, 182,
 # gsx@fd000000
     151,
+# imr-lx4@fe860000
+    224,
+# imr-lx4@fe870000
+    225,
 # vcp4@fe910000
     292, 293,
 # vcp4@fe900000
@@ -297,6 +305,8 @@ iomem = [
     "e6510,1",
 #i2c@e66d8000
     "e66d8,1",
+#usb-phy@e65ee000
+    "e65ee,1",
 #ethernet@e6800000
     "e6800,1",
 #ethernet@e6800000
@@ -360,7 +370,7 @@ iomem = [
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
-#avb-mch
+#avb-mch@ec5a0100
     "ec5a0,1",
 #sound@ec500000
     "ec540,1",
@@ -376,6 +386,10 @@ iomem = [
     "fe000,80",
 #pcie@ee800000
     "ee800,80",
+#imr-lx4@fe860000
+    "fe860,2",
+#imr-lx4@fe870000
+    "fe870,2",
 #qos@e67e0000
     "e67e0,11",
 #gsx@fd000000
@@ -408,22 +422,22 @@ iomem = [
 #vspm@fe9a0000
     "fe9af,1",
 #vsp@fea20000
-    "fea20,4",
+    "fea20,5",
 #fcp@fea27000
     "fea27,1",
 #vsp@fea28000
-    "fea28,4",
+    "fea28,5",
 #fcp@fea2f000
     "fea2f,1",
 #vsp@fea30000
-    "fea30,4",
+    "fea30,5",
 #fcp@fea37000
     "fea37,1",
 #hdmi@fead0000
     "fead0,10",
 #display@feb00000
     "feb00,70",
-#display@feb00000
+#lvds@feb90000
     "feb90,1",
 #thermal@e6198000
     "e6198,1",
