--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-h3.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-h3.cfg
@@ -33,7 +33,6 @@ dt_compatible = [ "renesas,salvator-xs", "renesas,r8a7795" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
-    "/avs@e60a013c",
     "/gsx_opp_table0",
     "/gsx_opp_table1",
     "/gsx_opp_table2",
@@ -54,7 +53,7 @@ dt_passthrough_nodes = [
     "/firmware",
     "/soc",
     "/audio-clkout",
-    "/avb-mch",
+    "/avb-mch@ec5a0100",
     "/backlight",
     "/cvbs-in",
     "/hdmi-in",
@@ -76,8 +75,9 @@ dt_passthrough_nodes = [
     "/x21-clock",
     "/x22-clock",
     "/x23-clock",
-    "/i2c-8",
     "/vspm_if",
+    "/usb3s0",
+    "/usb_extal",
 ]
 
 dtdev = [
@@ -244,13 +244,13 @@ irqs = [
     199,
 # sd@ee160000
     200,
-# usb-phy@ee080200
+# usb@ee080000
     140,
-# usb-phy@ee0e0200
+# usb@ee0e0000
     68,
-# usb@ee0a0100
+# usb@ee0a0000
     144,
-# usb@ee0c0100
+# usb@ee0c0000
     145,
 # usb@e6590000
     139,
@@ -337,6 +337,8 @@ iomem = [
     "e6060,1",
 #interrupt-controller@e61c0000
     "e61c0,1",
+#usb-phy@e65ee000
+    "e65ee,1",
 #dma-controller@e6700000
     "e6700,10",
 #dma-controller@e7300000
@@ -384,7 +386,7 @@ iomem = [
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
-#avb-mch
+#avb-mch@ec5a0100
     "ec5a0,1",
 #sound@ec500000
     "ec540,1",
@@ -482,15 +484,15 @@ iomem = [
 #vspm@fe9b0000
     "fe9bf,1",
 #vsp@fea20000
-    "fea20,4",
+    "fea20,5",
 #fcp@fea27000
     "fea27,1",
 #vsp@fea28000
-    "fea28,4",
+    "fea28,5",
 #fcp@fea2f000
     "fea2f,1",
 #vsp@fea30000
-    "fea30,4",
+    "fea30,5",
 #fcp@fea37000
     "fea37,1",
 #fdpm@fe940000
@@ -507,7 +509,7 @@ iomem = [
     "feae0,10",
 #display@feb00000
     "feb00,80",
-#display@feb00000
+#lvds@feb90000
     "feb90,1",
 #thermal@e6198000
     "e6198,1",
