--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-m3n.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-m3n.cfg
@@ -46,7 +46,7 @@ dt_passthrough_nodes = [
     "/firmware",
     "/soc",
     "/audio-clkout",
-    "/avb-mch",
+    "/avb-mch@ec5a0100",
     "/backlight",
     "/cvbs-in",
     "/hdmi-in",
@@ -68,8 +68,9 @@ dt_passthrough_nodes = [
     "/x21-clock",
     "/x22-clock",
     "/x23-clock",
-    "/i2c-8",
     "/vspm_if",
+    "/usb3s0",
+    "/usb_extal",
 ]
 
 dtdev = [
@@ -299,6 +300,8 @@ iomem = [
     "e6510,1",
 #i2c@e66d8000
     "e66d8,1",
+#usb-phy@e65ee000
+    "e65ee,1",
 #ethernet@e6800000
     "e6800,1",
 #ethernet@e6800000
@@ -368,7 +371,7 @@ iomem = [
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
-#avb-mch
+#avb-mch@ec5a0100
     "ec5a0,1",
 #sound@ec500000
     "ec540,1",
@@ -411,18 +414,18 @@ iomem = [
 #vspm@fe9a0000
     "fe9af,1",
 #vsp@fea20000
-    "fea20,4",
+    "fea20,5",
 #fcp@fea27000
     "fea27,1",
 #vsp@fea28000
-    "fea28,4",
+    "fea28,5",
 #fcp@fea2f000
     "fea2f,1",
 #hdmi@fead0000
     "fead0,10",
 #display@feb00000
     "feb00,80",
-#display@feb00000
+#lvds@feb90000
     "feb90,1",
 ]
 
