--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-m3ulcb.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-m3ulcb.cfg
@@ -33,7 +33,6 @@ dt_compatible = [ "renesas,m3ulcb", "renesas,r8a7796" ]
 # Clocks and regulators are needed and are in the device tree root,
 # but we do not want to copy all root nodes: handle these one by one
 dt_passthrough_nodes = [
-    "/avs@e60a013c",
     "/gsx_opp_table0",
     "/gsx_opp_table1",
     "/gsx_opp_table2",
@@ -54,7 +53,7 @@ dt_passthrough_nodes = [
     "/firmware",
     "/soc",
     "/audio-clkout",
-    "/avb-mch",
+    "/avb-mch@ec5a0100",
     "/hdmi0-out",
     "/keyboard",
     "/leds",
@@ -67,6 +66,8 @@ dt_passthrough_nodes = [
     "/x23-clock",
     "/vspm_if",
     "/versaclk-3",
+    "/usb3s0",
+    "/usb_extal",
 ]
 
 dtdev = [
@@ -289,7 +290,7 @@ iomem = [
 #sound@ec500000
     "ec500,1",
 #sound@ec500000
-#avb-mch
+#avb-mch@ec5a0100
     "ec5a0,1",
 #sound@ec500000
     "ec540,1",
@@ -333,23 +334,21 @@ iomem = [
 #vspm@fe9a0000
     "fe9af,1",
 #vsp@fea20000
-    "fea20,4",
+    "fea20,5",
 #fcp@fea27000
     "fea27,1",
 #vsp@fea28000
-    "fea28,4",
+    "fea28,5",
 #fcp@fea2f000
     "fea2f,1",
 #vsp@fea30000
-    "fea30,4",
+    "fea30,5",
 #fcp@fea37000
     "fea37,1",
 #hdmi@fead0000
     "fead0,10",
 #display@feb00000
     "feb00,70",
-#display@feb00000
-    "feb90,1",
 #imr-lx4@fe860000
     "fe860,2",
 #imr-lx4@fe870000
