domd: Drop deprecated/unneeded XEN command line options for M3N SoC
This patch just does missing cleanup for M3N.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Reviewed-by: Oleksandr Andrushchenko <oleksandr_andrushchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-xs-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a77965-salvator-xs-dom0.dts
@@ -18,7 +18,7 @@
 
 	chosen {
 		/* Override bootargs since default "dom0_max_vcpus=4" is not appropriate for r8a77965 SoC */
-		bootargs = "dom0_mem=256M console=dtuart dtuart=serial0 dom0_max_vcpus=2 bootscrub=0 flask_enforcing=1 loglvl=all cpufreq=none sched=credit2 sched_ratelimit_us=100";
+		bootargs = "dom0_mem=256M console=dtuart dtuart=serial0 dom0_max_vcpus=2 bootscrub=0 loglvl=all sched_ratelimit_us=100";
 	};
 
 	/delete-node/reserved-memory;
