--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-dom0.dts
@@ -10,6 +10,7 @@
 
 #include "r8a7796-salvator-x.dts"
 #include "xen-chosen.dtsi"
+#include "scpi.dtsi"
 
 / {
 	model = "Renesas Salvator-X board based on r8a7796";
