pm/cpufreq: Add SCPI clock specifiers for DVFS capable CPUs
This patch adds the clock specifiers so that the CPU DVFS feature
can be enabled for A57 cores.
As A53 cores are not DVFS capable, remove existing non-SCPI clock specifiers
for them.

According to the bindings:
https://www.kernel.org/doc/Documentation/devicetree/bindings/arm/arm%2Cscpi.txt

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>
Signed-off-by: Oleksandr Andrushchenko <andr2000@gmail.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-dom0.dts
@@ -61,6 +61,37 @@
 
 /delete-node/&adsp;
 
+&a57_0 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_1 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_2 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_3 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a53_0 {
+	/delete-property/clocks;
+};
+
+&a53_1 {
+	/delete-property/clocks;
+};
+
+&a53_2 {
+	/delete-property/clocks;
+};
+
+&a53_3 {
+	/delete-property/clocks;
+};
 
 /* ============================ Enabled IPMMUs ===============================*/
 &ipmmu_mm {
