--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-4x2g-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-4x2g-dom0.dts
@@ -61,6 +61,37 @@
 
 /delete-node/&adsp;
 
+&a57_0 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_1 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_2 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a57_3 {
+	clocks = <&scpi_dvfs 0>;
+};
+
+&a53_0 {
+	/delete-property/clocks;
+};
+
+&a53_1 {
+	/delete-property/clocks;
+};
+
+&a53_2 {
+	/delete-property/clocks;
+};
+
+&a53_3 {
+	/delete-property/clocks;
+};
 
 /* ============================ Enabled IPMMUs ===============================*/
 &ipmmu_mm {
