--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-4x2g-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-xs-4x2g-dom0.dts
@@ -83,19 +83,19 @@
 };
 
 &a53_0 {
-	/delete-property/clocks;
+	clocks = <&scpi_dvfs 1>;
 };
 
 &a53_1 {
-	/delete-property/clocks;
+	clocks = <&scpi_dvfs 1>;
 };
 
 &a53_2 {
-	/delete-property/clocks;
+	clocks = <&scpi_dvfs 1>;
 };
 
 &a53_3 {
-	/delete-property/clocks;
+	clocks = <&scpi_dvfs 1>;
 };
 
 /delete-node/&avs;
