dom0/domd: Create dummy DT modes for a specific master devices
Create dummy DT modes for master devices which have multiple interfaces
to more than one IOMMU devices.

These devices are:
fcpcs -> ipmmu_vc0, ipmmu_vc1
gsx   -> ipmmu_pv0, ipmmu_pv1, ipmmu_pv2, ipmmu_pv3

The reason is that the temporary, non-upstreamable code (which implements
handling master devices tied to multiple Cache IPMMUs) was removed from
the IPMMU driver in Xen.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-h3-4x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-x-h3-4x2g.cfg
@@ -114,7 +114,6 @@ dtdev = [
     "/soc/imr-lx4@fe870000",
     "/soc/imr-lx4@fe880000",
     "/soc/imr-lx4@fe890000",
-    "/soc/vcp4@fe90f000",
     "/soc/vspm@fe920000",
     "/soc/vspm@fe960000",
     "/soc/vspm@fe9a0000",
@@ -126,7 +125,12 @@ dtdev = [
     "/soc/fdpm@fe944000",
     "/soc/hdmi@fead0000",
     "/soc/hdmi@feae0000",
-    "/soc/gsx_domd",
+    "/soc/gsx_pv0_domd",
+    "/soc/gsx_pv1_domd",
+    "/soc/gsx_pv2_domd",
+    "/soc/gsx_pv3_domd",
+    "/soc/fcpcs_vc0",
+    "/soc/fcpcs_vc1",
 ]
 
 irqs = [
