--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-h3ulcb.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-h3ulcb.cfg
@@ -69,6 +69,9 @@ dt_passthrough_nodes = [
     "/versaclk-4",
     "/usb3s0",
     "/usb_extal",
+    "/reserved-memory",
+    "/mmngr",
+    "/mmngrbuf",
 ]
 
 dtdev = [
