--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-h3-2x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-h3-2x2g.cfg
@@ -78,6 +78,9 @@ dt_passthrough_nodes = [
     "/vspm_if",
     "/usb3s0",
     "/usb_extal",
+    "/reserved-memory",
+    "/mmngr",
+    "/mmngrbuf",
 ]
 
 dtdev = [
