dom0/domd: all (-salvator-x-h3-4x2g): Passthrough lossy_decompress region 1:1 mapped
Do not remove device specific region for Lossy Decompression (48M)
from the host DT, to let Xen to pick it up and handle as "Reserved memory".

Add corresponding memory range to domain config file as iomem (use default
Device-nGnRE memory policy) to get the region 1:1 mapped (gfn == mfn).
The mappings for that region will be established using 2M pages.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-h3ulcb-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-h3ulcb-dom0.dts
@@ -29,7 +29,12 @@
 	/delete-node/memory@500000000;
 	/delete-node/memory@600000000;
 	/delete-node/memory@700000000;
-	/delete-node/reserved-memory;
+
+	reserved-memory {
+		/delete-node/linux,cma@57000000;
+		/delete-node/linux,multimedia@70000000;
+	};
+
 	/delete-node/mmngr;
 	/delete-node/mmngrbuf;
 
