--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-dom0.dts
@@ -25,7 +25,12 @@
 	};
 
 	/delete-node/memory@600000000;
-	/delete-node/reserved-memory;
+
+	reserved-memory {
+		/delete-node/linux,cma@57000000;
+		/delete-node/linux,multimedia@70000000;
+	};
+
 	/delete-node/mmngr;
 	/delete-node/mmngrbuf;
 
