--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-salvator-x-dom0.dts
@@ -23,7 +23,12 @@
 	};
 
 	/delete-node/memory@600000000;
-	/delete-node/reserved-memory;
+
+	reserved-memory {
+		/delete-node/linux,adsp@57000000;
+		/delete-node/linux,cma@58000000;
+		/delete-node/linux,multimedia@70000000;
+	};
 
 	/delete-node/mmngr;
 	/delete-node/mmngrbuf;
