dom0: all: Remove CMA pool configuration from domd config
The reason is that the CMA pool is configured via DT:

/* global autoconfigured region for contiguous allocations */
linux,cma@58000000 {
	compatible = "shared-dma-pool";
	reusable;
	reg = <0x00000000 0x58000000 0x0 0x18000000>;
	linux,cma-default;
};

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-m3n.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-salvator-xs-m3n.cfg
@@ -14,9 +14,9 @@ device_tree = "/xt/domd/domd.dtb"
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 cma=256M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=256M pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
+extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0 modprobe.blacklist=sata_rcar"
 
 # Initial memory allocation (MB)
 memory = 768
