dom0/domd: m3ulcb/salvator-xs-m3n: Redistribute guest memory resources
With enabling multimedia in DomD we need to assign more memory to it.
But, having only 2G-128MB available on these machines, we don't have
any way other than reducing DomU memory resources.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-m3ulcb.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-m3ulcb.cfg
@@ -14,12 +14,12 @@ device_tree = "/xt/domd/domu.dtb"
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 cma=256M pvrsrvkm.DriverMode=1"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 cma=128M pvrsrvkm.DriverMode=1 xt_page_pool=2097152 xt_cma=4194304"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=256M pvrsrvkm.DriverMode=1"
+extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=128M pvrsrvkm.DriverMode=1 xt_page_pool=2097152 xt_cma=4194304"
 
 # Initial memory allocation (MB)
-memory = 768
+memory = 512
 
 max_grant_frames = 64
 
