--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7796-m3ulcb-domd.dts
@@ -49,6 +49,19 @@
 	/delete-node/thermal-zones;
 	/delete-node/pmu_a57;
 	/delete-node/pmu_a53;
+
+	/* Reduce CMA pool to from 384MB to 256MB */
+	reserved-memory {
+		/delete-node/linux,cma@58000000;
+
+		/* global autoconfigured region for contiguous allocations */
+		linux,cma@60000000 {
+			compatible = "shared-dma-pool";
+			reusable;
+			reg = <0x00000000 0x60000000 0x0 0x10000000>;
+			linux,cma-default;
+		};
+	};
 };
 
 /delete-node/&adsp;
