domd: Align Sound sub-system with what we have in meta-xt-prod-devel
This patch contains changes from the following meta-xt-prod-devel's
patches:

1. domd: add pulseaudio configuration for KF board
2. domd: make pulseaudio run as system service
3. domd: run sndbe as system service
4. domd: add proc-xen.mount to sndbe.service as requires field
5. domd: Remove pulseaudio.socket
6. domd: remove disallow-module-loading from pulseaudio.service

This is need for the PV Sound feature to work properly. Subsequent
patch will enable that support.

Signed-off-by: Oleksandr Grytsov <oleksandr_grytsov@epam.com>
Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/sndbe.service
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/sndbe.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Sound backend
-Requires=pulseaudio.service
-After=pulseaudio.service
+Requires=proc-xen.mount pulseaudio.service
+After=proc-xen.mount pulseaudio.service
 
 [Service]
 Type=simple
