dom0/domd: all (-salvator-x-h3-4x2g): Create dummy DT modes ...
... for a specific master devices

This is follow-up patch for the following commit:
3e23540ffe55d9a429aeb65cbd300fc4443e8240
dom0/domd: Create dummy DT modes for a specific master devices

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-dom0.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-dom0.dts
@@ -26,8 +26,14 @@
 
 / {
 	soc {
-		/delete-node/gsx_domd;
-		/delete-node/gsx_domu;
+		/delete-node/gsx_pv0_domd;
+		/delete-node/gsx_pv1_domd;
+		/delete-node/gsx_pv2_domd;
+		/delete-node/gsx_pv3_domd;
+		/delete-node/gsx_pv0_domu;
+		/delete-node/gsx_pv1_domu;
+		/delete-node/gsx_pv2_domu;
+		/delete-node/gsx_pv3_domu;
 	};
 
 };
