--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-xs-h3-2x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-xs-h3-2x2g.cfg
@@ -13,7 +13,10 @@ kernel = "/xt/domu/Image"
 device_tree = "/xt/domd/domu.dtb"
 
 dtdev = [
-    "/soc/gsx_domu",
+    "/soc/gsx_pv0_domu",
+    "/soc/gsx_pv1_domu",
+    "/soc/gsx_pv2_domu",
+    "/soc/gsx_pv3_domu",
 ]
 
 # Kernel command line options
