--- a/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-domd.dts
+++ b/recipes-domd/domd-image-weston/files/meta-xt-prod-extra/recipes-kernel/linux/linux-renesas/r8a7795-salvator-x-4x2g-domd.dts
@@ -52,22 +52,7 @@
 
 /delete-node/&adsp;
 
-&dmac0 {
-	/delete-property/iommus;
-};
-
-&dmac1 {
-	/delete-property/iommus;
-};
-
-&dmac2 {
-	/delete-property/iommus;
-};
-&audma0 {
-	/delete-property/iommus;
-};
-
-&audma1 {
+&sdhi2 {
 	/delete-property/iommus;
 };
 
