dom0: Update support for H3ULCB ES3.0 8GB machine
According to the current Gen3-test state.

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-h3ulcb-4x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domd-h3ulcb-4x2g.cfg
@@ -14,12 +14,12 @@ device_tree = "/xt/domd/domd.dtb"
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 cma=256M@1-2G pvrsrvkm.DriverMode=0"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domd,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 cma=256M@1-2G pvrsrvkm.DriverMode=0"
+extra = "root=/dev/STORAGE_PART2 rw rootwait console=hvc0 pvrsrvkm.DriverMode=0"
 
 # Initial memory allocation (MB)
-memory = 1216
+memory = 2048
 
 # Number of VCPUS
 vcpus = 4
@@ -69,6 +69,9 @@ dt_passthrough_nodes = [
     "/versaclk-4",
     "/usb3s0",
     "/usb_extal",
+    "/reserved-memory",
+    "/mmngr",
+    "/mmngrbuf",
 ]
 
 dtdev = [
@@ -90,7 +93,6 @@ dtdev = [
     "/soc/imr-lx4@fe870000",
     "/soc/imr-lx4@fe880000",
     "/soc/imr-lx4@fe890000",
-    "/soc/vcp4@fe90f000",
     "/soc/vspm@fe920000",
     "/soc/vspm@fe960000",
     "/soc/vspm@fe9a0000",
@@ -101,7 +103,12 @@ dtdev = [
     "/soc/fdpm@fe940000",
     "/soc/fdpm@fe944000",
     "/soc/hdmi@fead0000",
-    "/soc/gsx_domd",
+    "/soc/gsx_pv0_domd",
+    "/soc/gsx_pv1_domd",
+    "/soc/gsx_pv2_domd",
+    "/soc/gsx_pv3_domd",
+    "/soc/fcpcs_vc0",
+    "/soc/fcpcs_vc1",
 ]
 
 irqs = [
@@ -240,6 +247,8 @@ irqs = [
 ]
 
 iomem = [
+    "54000,3000",
+    "0x47fd7,1@0xe0000",
 #avs@e60a013c
     "e60a0,1",
 #watchdog@e6020000
