--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3.cfg
@@ -48,4 +48,8 @@ vdispl = [ 'backend=DomD,be-alloc=0,connectors=1000:1920x1080' ]
 # but in both cases (Weston/DRM) multi-touch-num-contacts should also be set properly to match HW
 vkb = [ 'backend=DomD,backend-type=linux,multi-touch-width=1920,multi-touch-height=1080,multi-touch-num-contacts=10,unique-id=T:1000,feature-disable-pointer=1,feature-disable-keyboard=1' ]
 
+vsnd = [[ 'card, backend=DomD, buffer-size=65536, short-name=VCard, long-name=Virtual sound card, sample-rates=44100;48000, sample-formats=s16_le',
+          'pcm, name=dev1', 'stream, unique-id=pulse, type=P'
+       ]]
+
 on_crash = 'preserve'
