dom0: salvator-x-h3-4x2g: Passthrough VCP4/VSP/FDP devices to DomU
Besides inserting appropriate H/W resources (iomem, iommu, irq, etc)
to DomU config file and removing them from DomD config file, this patch
does the following:
1. Add required DT nodes to "dt_passthrough_nodes".
2. Add real SoC/machine DT compatible.
3. Add "chipid@fff00044" memory range.
4. Remove "cma=256M@1-2G" from command line

Signed-off-by: Oleksandr Tyshchenko <oleksandr_tyshchenko@epam.com>

--- a/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3-4x2g.cfg
+++ b/recipes-dom0/dom0-image-thin-initramfs/files/meta-xt-prod-extra/recipes-extended/guest-addons/files/domu-salvator-x-h3-4x2g.cfg
@@ -17,13 +17,21 @@ dtdev = [
     "/soc/gsx_pv1_domu",
     "/soc/gsx_pv2_domu",
     "/soc/gsx_pv3_domu",
+    "/soc/fcpcs_vc0",
+    "/soc/fcpcs_vc1",
+    "/soc/vspm@fe920000",
+    "/soc/vspm@fe960000",
+    "/soc/vspm@fe9a0000",
+    "/soc/vspm@fe9b0000",
+    "/soc/fdpm@fe940000",
+    "/soc/fdpm@fe944000",
 ]
 
 # Kernel command line options
 # Uncomment this when using nfs as a boot device
-#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 cma=256M@1-2G pvrsrvkm.DriverMode=1"
+#extra = "root=/dev/nfs nfsroot=192.168.1.100:/srv/domu,vers=3 ip=dhcp rw rootwait console=hvc0 pvrsrvkm.DriverMode=1"
 # Uncomment this when using block device as a boot device
-extra = "root=/dev/xvda1 rw rootwait console=hvc0 cma=256M@1-2G pvrsrvkm.DriverMode=1"
+extra = "root=/dev/xvda1 rw rootwait console=hvc0 pvrsrvkm.DriverMode=1"
 
 # Initial memory allocation (MB)
 memory = 2048
@@ -33,14 +41,71 @@ max_grant_frames = 64
 # Number of VCPUS
 vcpus = 4
 
+dt_compatible = [ "renesas,salvator-x", "renesas,r8a7795" ]
+
+dt_passthrough_nodes = [
+    "/reserved-memory",
+    "/vspm_if",
+    "/mmngr",
+    "/mmngrbuf",
+]
+
 irqs = [
-    151
+    151,
+#vcp4@fe8d0000
+    412, 413, 255,
+#vcp4@fe910000
+    292, 293,
+#vcp4@fe900000
+    272, 273,
+#vspm@fe920000
+    497,
+#vspm@fe960000
+    298,
+#vspm@fe9a0000
+    476,
+#vspm@fe9b0000
+    477,
+#fdpm@fe940000
+    294,
+#fdpm@fe944000
+    295,
 ]
 
 iomem = [
 #gsx@fd000000
     "0xfd010,1@0xfd000",
- ]
+    "0x47fd7,1@0xe0000",
+    "54000,3000",
+#vcp4@fe90f000
+    "fe90f,1",
+#vcp4@fe8d0000
+    "fe8d0,1",
+#vcp4@fe910000
+    "fe910,1",
+#vcp4@fe900000
+    "fe900,1",
+#vspm@fe920000
+    "fe920,8",
+    "fe92f,1",
+#vspm@fe960000
+    "fe960,8",
+    "fe96f,1",
+#vspm@fe9a0000
+    "fe9a0,8",
+    "fe9af,1",
+#vspm@fe9b0000
+    "fe9b0,8",
+    "fe9bf,1",
+#fdpm@fe940000
+    "fe940,3",
+    "fe950,1",
+#fdpm@fe944000
+    "fe944,3",
+    "fe951,1",
+#chipid@fff00044
+    "fff00,1",
+]
 
 # Uncomment this when using block device as a boot device
 disk = [ 'backend=DomD,phy:/dev/STORAGE_PART3,xvda1' ]
